Fix Denied in Dark Mode

--- a/_sass/custom/app.scss
+++ b/_sass/custom/app.scss
@@ -13,7 +13,7 @@
   text-align: center;
 
   @include from($tablet) {
-    background-image: url('/assets/img/macook-half-wireframe-now-playing@2x.jpg');
+    background-image: url('/assets/img/macook-half-wireframe-now-playing@2x.png');
     background-size: 466px 513px;
     background-position: 100% 0;
     background-repeat: no-repeat;
@@ -22,7 +22,7 @@
     min-height: 513px;
 
     &-image {
-      margin: 39px 40px 0 0;
+      margin: 23px 40px 0 0;
     }
   }
 }
